# AAL

./: .gitignore  AAL.cbp  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  build.sh  cmake_install.cmake
data/: test1.txt  test2.txt  test3.txt
data/results/: results1.csv  results1_dense.csv  results2.csv  results2_dense.csv  results2_sparse.csv  results3.csv
data/solutions/: test2_solution.txt  test3_solution.txt  test5.txt
docs/: AAL.xlsx
include/: Graph.h
include/data_structures/: Graph.h  Vertex.h
include/mappers/: AbstractProblemMapper.h  StudentScheduleProblemMapper.h
include/problem/: Problem.h  StudentScheduleProblem.h
include/problem/generators/: AcyclicGraphGenerator.h
include/problem/solver/: Solver.h  StudentScheduleSolver.h
src/: main.cpp
src/data_structures/: Graph.cpp  Vertex.cpp
src/mappers/: StudentScheduleProblemMapper.cpp
src/problem/: StudentScheduleProblem.cpp
src/problem/generators/: AcyclicGraphGenerator.cpp
src/problem/solver/: StudentScheduleSolver.cpp
